# bc_flight_computer

./: .gitmodules
Software/flight_software/: .clang-format  .gitignore  CMakeLists.txt  README.txt
Software/flight_software/bsp/: enos.h
Software/flight_software/hello_world/serial/: .CMakeLists.txt.swp
Software/flight_software/hello_world/usb/: .CMakeLists.txt.swp
Software/flight_software/src/: main.cpp
Software/flight_software/src/control_logic/inc/: IThrustCurve.h  thrust_curve_E12.h  time_keeper.h  torque_to_tvc_angle.h
Software/flight_software/src/control_logic/src/: time_keeper.cpp  torque_to_tvc_angle.cpp
Software/flight_software/src/drivers/inc/: drv_bmi088.h  drv_bmp280.h  drv_buzzer.h  drv_flash.h  drv_gpio.h  drv_led.h  drv_servo.h
Software/flight_software/src/drivers/src/: drv_bmi088.cpp  drv_bmp280.cpp  drv_buzzer.cpp  drv_flash.cpp  drv_gpio.cpp  drv_led.cpp  drv_servo.cpp
Software/flight_software/src/system/inc/: control_loop.h  data_container.h  logger.h  orientation_calculator.h  parachute.h  state_detector.h  telemetry_container.h  time_keeper.h
Software/flight_software/src/system/inc/controls/: PID.h  euler_angle_error_calculator.h  quaternion_orientation.h  torque_to_tvc_angle.h  tvc_angle_to_servo_setpoint.h
Software/flight_software/src/system/inc/thrust_curves/: IThrustCurve.h  thrust_curve_E9.h
Software/flight_software/src/system/src/: control_loop.cpp  data_container.cpp  logger.cpp  orientation_calculator.cpp  parachute.cpp  state_detector.cpp  telemetry_container.cpp  thrust_curve_E12.cpp  time_keeper.cpp
Software/flight_software/src/system/src/controls/: euler_angle_error_calculator.cpp  quaternion_orientation.cpp  torque_to_tvc_angle.cpp  tvc_angle_to_servo_setpoint.cpp
Software/flight_software/src/system/src/thrust_curves/: thrust_curve_E12.cpp  (+1 more)
Software/flight_software/src/tests/: characterize_servo_test.cpp  characterize_servo_test.h  chute_ejection_test.cpp  chute_ejection_test.h  orientation_test.cpp  orientation_test.h
(+45 files in other folders)
